# code-jam-management

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main-requirements.txt  pyproject.toml  tox.ini
.github/: review-policy.yml
.github/workflows/: build.yaml  lint-test.yaml  main.yaml
alembic/: env.py
alembic/versions/: 103ccfde4460_create_tables.py  3bb5cc4b5d48_add_unique_team_name_and_jam_constraint.py  89e175c77aea_add_jam_column.py  a2c25c740f2a_add_discord_identifiers_to_team.py
api/: __init__.py  constants.py  database.py  dependencies.py  main.py  middleware.py  models.py  settings.py
api/models/orm/: __init__.py  base.py  infraction.py  jam.py  team.py  team_has_users.py  user.py
api/models/schemas/: utils.py
api/models/schemas/old/: infraction.py  jam.py  team.py  user.py
api/models/schemas/v1/: infraction.py  jam.py  team.py  user.py  winner.py
api/routers/: codejams.py  infractions.py  teams.py  users.py  winners.py
api/routers/old/: __init__.py  codejams.py  infractions.py  teams.py  users.py  winners.py
api/routers/v1/: __init__.py  codejams.py  infractions.py  teams.py  users.py  winners.py
api/utils/: settings.py
migrations/: env.py
migrations/versions/: 103ccfde4460_create_tables.py  3bb5cc4b5d48_add_unique_team_name_and_jam_constraint.py  698fc7687b7f_new_orm_models.py  89e175c77aea_add_jam_column.py  a2c25c740f2a_add_discord_identifiers_to_team.py
postgres/: init.sql
tests/: conftest.py  test_token_auth.py
tests/routers/: conftest.py  test_codejams.py  test_infractions.py  test_teams.py  test_users.py  test_winners.py
