[tool.poetry]
name = "code-jam-management"
version = "1.0.0"
description = "Management microservice for Python Discord Code Jams"
authors = ["Python Discord <info@pythondiscord.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
taskipy = "^1.8.1"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.3.0"
flake8-todo = "^0.7"
pep8-naming = "^0.11.1"
uvicorn = "^0.13.4"
fastapi = "^0.65.1"
asyncpg = "^0.23.0"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
webserver = "uvicorn main:app"
