[tool.poetry]
name = "code-jam-management"
version = "1.0.0"
description = "Management microservice for Python Discord Code Jams"
authors = ["Python Discord <info@pythondiscord.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"

alembic = {version = "1.11.1", extras = ["tz"]}
fastapi = "0.96.0"
SQLAlchemy = {version = "2.0.16", extras = ["asyncio", "postgresql_asyncpg"]}
uvicorn = {version = "0.22.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "1.4.0"
taskipy = "1.11.0"

[tool.poetry.group.linting.dependencies]
black = "23.3.0"
flake8 = "6.0.0"
flake8-annotations = "3.0.0"
flake8-bugbear = "23.3.12"
flake8-docstrings = "1.7.0"
flake8-isort = "6.0.0"
flake8-string-format = "0.3.0"
flake8-tidy-imports = "4.8.0"
flake8-todo = "0.7"
isort = "5.12.0"
pep8-naming = "0.13.3"
pre-commit = "3.3.2"

[tool.poetry.group.testing.dependencies]
coveralls = "3.3.1"
httpx = "0.24.1"
hypothesis = "6.77.0"
pytest = "7.3.2"
pytest-asyncio = "0.18.3"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
revision = "alembic revision --autogenerate -m"
migrate = "alembic upgrade head"
black = "black migrations tests api"
isort = "isort ."
webserver = "uvicorn api.main:app"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
